# sparkquest

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy-hf.yml  docker-publish.yml
app/: __init__.py  catalog.py  config.py  main.py
app/api/: handbook.py  interview.py  lessons.py  progress.py  submit.py  tutor.py
app/content/: loader.py  questions.py
app/core/: executor.py  gamification.py  grader.py  harness.py  models.py  spark_session.py
app/static/: app.js  index.html  styles.css
app/tutor/: tutor.py
benchmarks/: README.md  run_benchmarks.py
benchmarks/results/: grader.json  parallelism.csv  parallelism.json  size.csv  size.json  streaming.json
data/: README.md
data/sample/: transactions.csv
deploy/: fly.toml  render.yaml
deploy/huggingface/: README.md
docs/: ARCHITECTURE.md  BLUEPRINT.md  CURRICULUM.md  DEPLOYMENT.md  LINKEDIN_POST.md
docs/handbook/: 02-performance-tuning.md  README.md  (+16 more)
paper/: README.md  sparkquest.tex
questions/: behavioral.yaml  coding.yaml  file-formats.yaml  kafka.yaml  lakehouse.yaml  modeling.yaml  orchestration.yaml  performance-2.yaml  performance.yaml  python-2.yaml  python.yaml  scenarios.yaml  spark-core-2.yaml  spark-core.yaml  sql-2.yaml  sql.yaml  streaming-2.yaml  streaming.yaml  system-design.yaml
scripts/: deploy_hf.py  deploy_hf.sh  fetch_kaggle_data.sh  validate_lessons.py
tests/: conftest.py  test_api.py  test_content.py  test_grader.py  test_solutions.py
(+99 files in other folders)
