[project]
name = "sparkquest"
version = "1.0.0"
description = "A gamified, browser-based course that takes learners from zero to pro in Python, PySpark, and Spark Structured Streaming, with an AI tutor and auto-graded challenges that execute real Spark."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "U E Sai Pavan Vamshi Krishna" }]
keywords = ["pyspark", "apache-spark", "data-engineering", "education", "structured-streaming", "fastapi", "edtech"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["data", "benchmarks/results", "paper"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "spark: tests that start a real Spark session (slow; deselect with -m 'not spark')",
    "delta: tests needing Delta Lake + its Maven JAR (run in CI/Docker, not the offline sandbox)",
]

[tool.coverage.run]
omit = ["tests/*", "benchmarks/*"]
